#8 fixed text cut off in the sparks area, fixed the wrong break in the worldstate view header

--- a/css/app.css
+++ b/css/app.css
@@ -75,3 +75,12 @@ span.glyphicon{
     /*background-color: rgba(91,89,88,.8);*/
     color:#fff !important;
 }
+
+/* The smart admin css contains a bug which cuts off some letters in the sparks element*/
+#sparks li span{
+    line-height: 24px;
+}
+
+#header, #ribbon{
+    z-index: 55555 !important;
+}
